--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	
 	<name>maven-web-application</name>
 
@@ -98,15 +98,10 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.126.197.35:8081/repository/sai-technologies-snapshots/</url>
+	      <url>http://13.126.197.35:8081/repository/sai-technologies-releases/</url>
 	    </repository>
 	    
-	    <snapshotRepository>
-	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.126.197.35:8081/repository/sai-technologies-releases/</url>
-	    </snapshotRepository>
-	    
+	   
 	</distributionManagement>
 	
 	<build>
