--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
 
@@ -95,11 +95,11 @@
 	
 	<distributionManagement>
 	
-	    <repository>
+	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.126.197.35:8081/repository/sai-technologies-releases/</url>
-	    </repository>
+	      <url>http://13.126.197.35:8081/repository/sai-technologies-snapshots/</url>
+	    </snapshotRepository>
 	    
 	   
 	</distributionManagement>
